# flatfox-finder

./: .env.example  .gitignore  BUILD-SPEC.md  CLAUDE.md  MATCHING-ALGORITHM.md  PROJECT-PLAN.md  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  audit-ci.jsonc  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/api/auth/signup/: route.ts
app/api/matches/[id]/: route.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/dashboard/: page.tsx
app/app/login/: page.tsx
app/app/onboarding/: page.tsx
app/app/privacy/: page.tsx
app/app/settings/: page.tsx
app/app/signup/: page.tsx
app/components/: Header.tsx
app/components/profile/: fields.tsx
app/lib/: auth-options.ts  auth.ts  db.ts  matcher.ts  pii.ts  rate-limit.ts  translate.ts
app/lib/prompts/: draft_message.ts  parse_profile.ts  translate_description.ts
app/prisma/: schema.prisma
app/types/: next-auth.d.ts
shared/: README.md
shared/init/: 01-extensions.sql
shared/migrations/: 20260604210810_init.sql  20260606120000_add_message_language.sql
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
worker/prompts/: extract_listing.txt
worker/src/flatfox_worker/: __init__.py  config.py  email_digest.py  extractor.py  flatfox_client.py  ingestion.py  main.py  matcher.py  pii.py  purge.py
worker/tests/: test_email_digest.py  test_extractor.py  test_flatfox_client.py  test_ingestion.py  test_matcher.py  test_pii.py  test_purge.py
(+14 files in other folders)
