[project]
name = "flatfox-worker"
version = "0.1.0"
description = "Ingestion, AI extraction, matching, and message drafting worker for the Flatfox housing app."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
